--- a/index.html
+++ b/index.html
@@ -62,7 +62,31 @@
           </div>
           <div class="single-animation">
             <h5>Ready to be opened</h5>
-            <a href="#" class="btn cta-btn">Buttons</a>
+            <a href="#" class="btn cta-btn">Explore</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Discover Story -->
+    <section class="discover-our-story">
+      <div class="container">
+        <div class="restaurant-info">
+          <div class="restaurant-description padding-right animate-left">
+            <div class="global-headline">
+              <h2 class="sub-headline">
+                <span class="first-letter">D</span>iscover
+              </h2>
+              <h1 class="headline headline-dark">Our Story</h1>
+              <div class="asterisk"><i class="fas fa-asterisk"></i></div>
+            </div>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident impedit dolor voluptatum aperiam, ipsam tenetur repudiandae neque iusto consequatur reiciendis fuga amet perferendis incidunt minus, nostrum sunt illo error tempora.
+            </p>
+            <a href="#" class="btn body-btn">About us</a>
+          </div>
+          <div class="restaurant-info-img animate-right">
+            <img src="./img/our-story-1.jpg" alt="">
           </div>
         </div>
       </div>
