--- a/index.html
+++ b/index.html
@@ -87,6 +87,48 @@
           </div>
           <div class="restaurant-info-img animate-right">
             <img src="./img/our-story-1.jpg" alt="">
+          </div> 
+        </div>
+      </div>
+    </section>
+
+    <!-- Tasteful -->
+    <section class="tasteful-recipes between">
+      <div class="container">
+          <div class="global-headline">
+            <div class="animate-top">
+              <h2 class="sub-headline">
+                <span class="first-letter">T</span>asteful
+              </h2>
+            </div>
+            <div class="animate-bottom">
+              <h1 class="headline headline-dark">Recipes</h1>
+            </div>
+          </div>
+      </div>
+    </section>
+
+    <!-- Discover Menu -->
+    <section class="discover-our-menu">
+      <div class="container">
+        <div class="restaurant-info">
+          <div class="image-group padding-right animate-left">
+            <img src="./img/menu-group-1.jpg" alt="">
+            <img src="./img/menu-group-2.jpg" alt="">
+            <img src="./img/menu-group-3.jpg" alt="">
+            <img src="./img/menu-group-4.jpg" alt="">
+          </div>
+          <div class="reataurant-description animate-right">
+            <div class="global-headline">
+              <h2 class="sub-headline">
+                <span class="first-letter">D</span>iscover
+              </h2>
+              <h1 class="headline headline-dark">Menu</h1>
+            </div>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est vel ad soluta. Doloribus dolore repellendus incidunt, consequatur rerum temporibus veritatis debitis ipsum perferendis praesentium aliquid, vero eaque veniam sed ab odio ut illo nam obcaecati.
+            </p>
+            <a href="#" class="btn body-btn">View the full menu</a>
           </div>
         </div>
       </div>
