--- a/index.html
+++ b/index.html
@@ -134,6 +134,75 @@
       </div>
     </section>
 
+    <!-- The Perfect blend -->
+    <section class="perfect-blend between">
+      <div class="container">
+        <div class="global-headline">
+          <div class="animate-top">
+            <h2 class="sub-headline">
+              <span class="first-letter">T</span>he perfect
+            </h2>
+          </div>
+          <div class="animate-bottom">
+            <h1 class="headline ">Blend</h1>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Culinary-delight -->
+    <section class="culinary-delight">
+      <div class="container">
+        <div class="restaurant-info">
+          <div class="restaurant-description padding-right animate-left">
+            <div class="global-headline">
+              <h2 class="sub-headline">
+                <span class="first-letter">C</span>ulinary
+              </h2>
+              <h1 class="headline headline-dark">Delight</h1>
+              <div class="asterisk"><i class="fas fa-asterisk"></i></div>
+            </div>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident impedit dolor voluptatum aperiam, ipsam
+              tenetur repudiandae neque iusto consequatur reiciendis fuga amet perferendis incidunt minus, nostrum sunt illo
+              error tempora.
+            </p>
+            <a href="#" class="btn body-btn">Make a reservation</a>
+          </div>
+          <div class="image-group">
+            <img class="animate-top" src="./img/delight-group-1.jpg" alt="">
+            <img class="animate-bottom" src="./img/delight-group-2.jpg" alt="">
+          </div>
+        </div>
+      </div
+    </section>
+
+    <!-- Footer -->
+    <footer class="container">
+      <div class="back-to-top">
+        <a href="#hero"><i class="fas fa-chevron-up"></i></a>
+      </div>
+      <div class="footer-content">
+        <div class="footer-content-about animate-up">
+          <h4>About Rosa</h4>
+          <div class="asterisk"><i class="fas fa-asterisk"></i></div>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla voluptate repellat, a quam porro reiciendis fugiat provident laborum optio corporis. Necessitatibus fugit ipsam accusantium qui maiores. Voluptatum blanditiis architecto incidunt.</p>
+        </div>
+        <div class="footer-content-divider animate-bottom">
+          <div class="social-menu">
+            <h4>Follow along</h4>
+            <ul class="social-icon">
+              <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+              <li><a href="#"><i class="fab fa-facebook-square"></i></a></li>
+              <li><a href="#"><i class="fab fa-pinterest"></i></a></li>
+              <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+              <li><a href="#"><i class="fab fa-tripadvisor"></i></a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </footer>
+
     
 
     <!-- Optional JavaScript -->
