--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
             <img class="animate-bottom" src="./img/delight-group-2.jpg" alt="">
           </div>
         </div>
-      </div
+      </div>
     </section>
 
     <!-- Footer -->
@@ -186,10 +186,10 @@
         <div class="footer-content-about animate-up">
           <h4>About Rosa</h4>
           <div class="asterisk"><i class="fas fa-asterisk"></i></div>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla voluptate repellat, a quam porro reiciendis fugiat provident laborum optio corporis. Necessitatibus fugit ipsam accusantium qui maiores. Voluptatum blanditiis architecto incidunt.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio nesciunt veritatis iusto, labore mollitia eaque aut deleniti perspiciatis saepe sed corporis vitae ab placeat itaque quisquam nostrum? Omnis quod dolorum perferendis ab rerum voluptate quia obcaecati? Ad vel earum mollitia minus quibusdam eveniet adipisci itaque nesciunt suscipit, iste aspernatur consequuntur praesentium. Fugiat mollitia illum fuga, possimus veritatis molestias inventore adipisci necessitatibus voluptatum alias neque nam quia tempore odit dolore. Aspernatur!</p>
         </div>
         <div class="footer-content-divider animate-bottom">
-          <div class="social-menu">
+          <div class="social-media">
             <h4>Follow along</h4>
             <ul class="social-icon">
               <li><a href="#"><i class="fab fa-twitter"></i></a></li>
@@ -198,6 +198,15 @@
               <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
               <li><a href="#"><i class="fab fa-tripadvisor"></i></a></li>
             </ul>
+          </div>
+          <div class="newsletter-container">
+            <h4>Newsletter</h4>
+            <form action="" class="newsletter-from">
+              <input type="text" class="newsletter-input" placeholder="Your Email Address...">
+              <buuton class="newsletter-btn" type="submit">
+                <i class="fas fa-envelope"></i>
+              </buuton>
+            </form>
           </div>
         </div>
       </div>
