--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <a href="index.html" class="logo"><img src="./img/logo-rosa.png" alt=""></a>
           <ul class="nav-list">
             <li class="nav-item">
-              <a href="index.html" class="nav-link">Home</a>
+              <a href="index.html" class="nav-link active">Home</a>
             </li>
             <li class="nav-item">
               <a href="#" class="nav-link">Menu</a>
@@ -186,7 +186,7 @@
         <div class="footer-content-about animate-up">
           <h4>About Rosa</h4>
           <div class="asterisk"><i class="fas fa-asterisk"></i></div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio nesciunt veritatis iusto, labore mollitia eaque aut deleniti perspiciatis saepe sed corporis vitae ab placeat itaque quisquam nostrum? Omnis quod dolorum perferendis ab rerum voluptate quia obcaecati? Ad vel earum mollitia minus quibusdam eveniet adipisci itaque nesciunt suscipit, iste aspernatur consequuntur praesentium. Fugiat mollitia illum fuga, possimus veritatis molestias inventore adipisci necessitatibus voluptatum alias neque nam quia tempore odit dolore. Aspernatur!</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio nesciunt veritatis iusto, labore mollitia eaque aut deleniti perspiciatis saepe sed corporis vitae ab placeat itaque quisquam nostrum? Omnis quod dolorum perferendis ab rerum voluptate quia obcaecati? Ad vel earum mollitia minus quibusdam eveniet adipisci itaque nesciunt suscipi </p>
         </div>
         <div class="footer-content-divider animate-bottom">
           <div class="social-media">
