--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
         <a href="#hero"><i class="fas fa-chevron-up"></i></a>
       </div>
       <div class="footer-content">
-        <div class="footer-content-about animate-up">
+        <div class="footer-content-about animate-top">
           <h4>About Rosa</h4>
           <div class="asterisk"><i class="fas fa-asterisk"></i></div>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio nesciunt veritatis iusto, labore mollitia eaque aut deleniti perspiciatis saepe sed corporis vitae ab placeat itaque quisquam nostrum? Omnis quod dolorum perferendis ab rerum voluptate quia obcaecati? Ad vel earum mollitia minus quibusdam eveniet adipisci itaque nesciunt suscipi </p>
